[package]
name = "WordWeaverBackend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws", "macros"] }
surrealdb = "2.0.4"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.31"
tracing = "0.1.40"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
serde = { version = "1.0.213", features = ["derive"] }
lazy_static = "1.5.0"
async_once = "0.2.6"
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web", "axum"] }
rand = "0.8.5"
serde_json = "1.0.132"

[[bin]]
name = "WordWeaverBackend"
path = "src/main.rs"